base/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scg-frontend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: scg-frontend
  template:
    metadata:
      labels:
        app: scg-frontend
    spec:
      containers:
      - name: frontend-container
        image: scgskku/scg-home-fe-prod:c82d64abe09477528ce6287a50d76e13d99e1b2d-30978532641-1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
