base/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scg-frontend-svc
spec:
  selector:
    app: scg-frontend
  ports:
  - protocol: TCP
    port: 8000     
    targetPort: 3000 
  type: NodePort
