base/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg-ingress-fe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: scg.skku.ac.kr
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scg-frontend-svc
            port:
              number: 8000
  tls: 
    - hosts:
      - scg.skku.ac.kr
      secretName: gitops-tls
status:
  loadBalancer:
    ingress:
      - ip: 115.145.172.24
